<resources>
    <string name="app_name">Wiimmfi App</string>
    <string name="toolbar_label">Wiimmfi</string>

    <string name="action_games">Games</string>
    <string name="action_more">More</string>

    <string name="game_stat_fragment_label">Game Stat Fragment</string>
    <string name="console_label">Console: %s</string>
    <string name="variants_label">Variants: %s</string>
    <string name="online_label">Online: %s</string>

    <string name="online_users_label">Online Users</string>

    <string name="friend_code_label">Friend Code:</string>
    <string name="status_label">Status:</string>
    <string name="name_label">Name:</string>

    <string name="try_again">Try Again</string>
    <string name="game_over">Game Over</string>
    <string name="error_message_generic">Unable to load the information.</string>

    <string name="donate_more_item">Donate</string>

</resources>